--- a/master/assets/index.html
+++ b/master/assets/index.html
@@ -39,8 +39,10 @@
     <header class="bg-gray-800 border-b border-gray-700 p-4 shadow-md z-10">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center gap-6">
+                <!-- LOGO UPDATE -->
                 <div class="flex items-center gap-3">
-                    <div class="w-3 h-3 rounded-full bg-green-500 shadow-[0_0_10px_rgba(34,197,94,0.5)]"></div>
+                    <img src="/assets/logo.png" alt="PortSentinel Logo"
+                        class="w-8 h-8 rounded shadow-[0_0_10px_rgba(34,197,94,0.3)]">
                     <h1 class="text-xl font-bold tracking-wider text-white">PORTSENTINEL <span
                             class="text-gray-600 text-sm font-mono">v1.0</span></h1>
                 </div>
@@ -49,6 +51,8 @@
                         class="text-gray-300 hover:text-white text-sm font-semibold transition-colors">Dashboard</a>
                     <a href="/view/services"
                         class="text-gray-300 hover:text-white text-sm font-semibold transition-colors">Services</a>
+                    <a href="/view/containers"
+                        class="text-gray-300 hover:text-white text-sm font-semibold transition-colors">Containers</a>
                 </nav>
             </div>
 
