added change password function

--- a/master/assets/index.html
+++ b/master/assets/index.html
@@ -72,8 +72,11 @@
                     hx-get="/view/rows" hx-trigger="keyup changed delay:500ms" hx-target="#process-table"
                     hx-swap="outerHTML">
             </div>
+            <a href="/change-password"
+                class="text-xs text-yellow-400 border border-yellow-500/50 px-2 py-1 rounded hover:bg-yellow-500/10 transition-colors">Change
+                Password</a>
             <a href="/logout"
-                class="text-xs text-red-400 border border-red-500/50 px-2 py-1 rounded hover:bg-red-500/10">Logout</a>
+                class="text-xs text-red-400 border border-red-500/50 px-2 py-1 rounded hover:bg-red-500/10 transition-colors">Logout</a>
         </div>
     </header>
 
